--- a/common_elements/header.html
+++ b/common_elements/header.html
@@ -1,194 +1,240 @@
 <style>
     /* Header */
     header {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 10px 100px;
+        background: white;
+        position: fixed;
+        width: 100%;
+        height: 90px;
+        top: 0;
+        z-index: 100;
+        /* gap: 50px;  */
+    }
+
+    nav {
+        background: #98CB66;
+        padding: 10px 40px;
+        border-radius: 30px;
+        display: flex;
+        gap: 30px;
+        margin-left: auto;
+    }
+
+    .header-icons {
+        display: flex;
+        gap: 20px;
+        align-items: center;
+        margin-left: 20px;
+    }
+
+    .logo img {
+        width: 100px;
+    }
+
+    nav a {
+        color: white;
+        text-decoration: none;
+        font-size: 14px;
+        transition: opacity 0.3s;
+    }
+
+    nav a:hover {
+        font-weight: bold;
+    }
+
+    nav a.active {
+        font-weight: bold;
+    }
+
+    .icon img {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+
+    }
+
+    /* ===== Cart icon hover → white ===== */
+    .icon img {
+        transition: filter 0.2s ease, transform 0.2s ease;
+    }
+
+    .icon:hover img {
+        filter: brightness(0) invert(1);
+    }
+
+
+    .mobile-icons {
+        display: none;
+    }
+
+    .profile-btn {
+        background-color: #98CB66;
+        color: white;
+        border: none;
+        padding: 4px 20px;
+        border-radius: 30px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bold;
+        font-family: 'Poppins', sans-serif;
+        transition: background 0.3s;
+    }
+
+    .profile-btn:hover {
+        background-color: #006844;
+        /* darker green on hover */
+    }
+
+    /* Hide hamburger on desktop */
+    .hamburger {
+        display: none;
+    }
+
+    /* Right slide-in menu */
+    @media (max-width: 880px) {
+
+        header {
             display: flex;
-            justify-content: flex-start;
-            align-items: center;
-            padding: 10px 100px;
-            background: white;
-            position: fixed;
+            justify-content: space-between;
+            padding: 10px 60px;
             width: 100%;
-            height: 90px;
-            top: 0;
-            z-index: 100;
-            /* gap: 50px;  */
         }
 
-        nav {
-            background: #98CB66;
-            padding: 10px 40px;
-            border-radius: 30px;
-            display: flex;
-            gap: 30px;
-            margin-left: auto;
-        }
-
-        .header-icons {
-            display: flex;
-            gap: 20px;
-            align-items: center;
-            margin-left: 20px;
-        }
-
-        .logo img{
-            width: 100px;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            font-size: 14px;
-            transition: opacity 0.3s;
-        }
-
-        nav a:hover {
-            font-weight: bold;
-        }
-
-        nav a.active {
-            font-weight: bold;
-        }
-
-        .icon img{
-            width: 30px;
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            
-        }
-        /* ===== Cart icon hover → white ===== */
-        .icon img{
-            transition: filter 0.2s ease, transform 0.2s ease;
-        }
-
-        .icon:hover img{
-            filter: brightness(0) invert(1);
-        }
-
-
-        .mobile-icons {
+        /* Hide desktop icons */
+        #desktop-icons {
             display: none;
+        }
+
+        /* Hamburger visible */
+        .hamburger {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            cursor: pointer;
+            z-index: 2000;
+        }
+
+        .hamburger span {
+            width: 25px;
+            height: 3px;
+            background: #006844;
+            transition: 0.3s;
+        }
+
+        /* Mobile menu */
+        nav {
+            position: fixed;
+            top: 0;
+            right: -260px;
+            /* hidden off screen */
+            width: 260px;
+            height: auto;
+            background: #98CB66;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            padding: 30px 20px;
+            gap: 20px;
+            transition: right 0.3s ease;
+            box-shadow: -2px 0 20px rgba(0, 0, 0, 0.1);
+            z-index: 1500;
+        }
+
+        /* Slide in */
+        nav.active {
+            right: 0;
+        }
+
+        /* Menu links */
+        nav a {
+            font-size: 18px;
+            padding: 8px 0;
+        }
+
+        /* Icons inside mobile menu */
+        .mobile-icons {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .mobile-icons img {
+            width: 28px;
+            height: 28px;
+            cursor: pointer;
         }
 
         .profile-btn {
-            background-color: #98CB66; 
-            color: white;              
-            border: none;             
-            padding: 4px 20px;         
-            border-radius: 30px;       
-            cursor: pointer;
-            font-size: 14px;
-            font-weight: bold;
-            font-family: 'Poppins', sans-serif;
-            transition: background 0.3s;
+            font-size: 18px;
         }
 
         .profile-btn:hover {
-            background-color: #006844; /* darker green on hover */
+            background: none;
+            font-weight: bold;
         }
 
-        /* Hide hamburger on desktop */
-        .hamburger {
-            display: none;
+        /* Hamburger animation (X) */
+        .hamburger.active span:nth-child(1) {
+            transform: translateY(8px) rotate(45deg);
         }
 
-        /* Right slide-in menu */
-        @media (max-width: 880px) {
-
-            header {
-                display: flex;
-                justify-content: space-between;
-                padding: 10px 60px;
-                width: 100%;
-            }
-
-            /* Hide desktop icons */
-            #desktop-icons {
-                display: none;
-            }
-
-            /* Hamburger visible */
-            .hamburger {
-                display: flex;
-                flex-direction: column;
-                gap: 5px;
-                cursor: pointer;
-                z-index: 2000;
-            }
-
-            .hamburger span {
-                width: 25px;
-                height: 3px;
-                background:#006844;
-                transition: 0.3s;
-            }
-
-            /* Mobile menu */
-            nav {
-                position: fixed;
-                top: 0;
-                right: -260px; /* hidden off screen */
-                width: 260px;
-                height: auto;
-                background: #98CB66;
-                display: flex;
-                align-items: center;
-                flex-direction: column;
-                padding: 30px 20px;
-                gap: 20px;
-                transition: right 0.3s ease;
-                box-shadow: -2px 0 20px rgba(0,0,0,0.1);
-                z-index: 1500;
-            }
-
-            /* Slide in */
-            nav.active {
-                right: 0;
-            }
-
-            /* Menu links */
-            nav a {
-                font-size: 18px;
-                padding: 8px 0;
-            }
-
-            /* Icons inside mobile menu */
-            .mobile-icons {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                gap: 20px;
-            }
-
-            .mobile-icons img {
-                width: 28px;
-                height: 28px;
-                cursor: pointer;
-            }
-
-            .profile-btn {
-                font-size: 18px;
-            }
-
-            .profile-btn:hover {
-                background: none;
-                font-weight: bold;
-            }
-
-            /* Hamburger animation (X) */
-            .hamburger.active span:nth-child(1) {
-                transform: translateY(8px) rotate(45deg);
-            }
-            .hamburger.active span:nth-child(2) {
-                opacity: 0;
-            }
-            .hamburger.active span:nth-child(3) {
-                transform: translateY(-8px) rotate(-45deg);
-            }
-
+        .hamburger.active span:nth-child(2) {
+            opacity: 0;
         }
+
+        .hamburger.active span:nth-child(3) {
+            transform: translateY(-8px) rotate(-45deg);
+        }
+
+    }
+
+    .mobile-header-cart {
+        display: none;
+    }
+
+    @media (max-width: 880px) {
+        .mobile-header-cart {
+            display: block;
+            margin-left: auto;
+            /* Push to right */
+            margin-right: 20px;
+        }
+
+        .mobile-header-cart img {
+            width: 30px;
+            height: 30px;
+            cursor: pointer;
+        }
+    }
+
+    /* Cart Counter Badge */
+    .cart-wrapper {
+        position: relative;
+        display: inline-block;
+    }
+
+    .cart-count {
+        position: absolute;
+        top: -5px;
+        right: -8px;
+        background-color: #ff4757;
+        color: white;
+        border-radius: 50%;
+        padding: 2px 6px;
+        font-size: 10px;
+        font-weight: bold;
+        min-width: 15px;
+        text-align: center;
+        display: none;
+        /* Hidden by default if 0 */
+    }
 </style>
 
 <header>
@@ -209,45 +255,51 @@
         <a href="/menu/menu.html">Menu</a>
         <a href="/story/story.html">About Us</a>
         <a href="/contact/contact.html">Contact Us</a>
+        <!-- MOBILE SLIDE-IN MENU -->
+        <nav id="nav-menu">
+            <a href="/index.html" class="active">Home</a>
+            <a href="/menu/menu.html">Menu</a>
+            <a href="/story/story.html">About Us</a>
+            <a href="/contact/contact.html">Contact Us</a>
 
-        <div class="mobile-icons">
-            <button class="profile-btn" type="button" onclick="return hbOpenLogin(event, true);">Log in</button>
-            <img src="/common_elements/cart.png" alt="cart">
-        </div>
-    </nav>
+            <div class="mobile-icons">
+                <button class="profile-btn" type="button" onclick="return hbOpenLogin(event, true);">Log in</button>
+                <img src="/common_elements/cart.png" alt="cart">
+            </div>
+        </nav>
 
-    <!-- Desktop Only Icons -->
-    <div class="header-icons" id="desktop-icons">
-        <div class="icon">
-            <button class="profile-btn" type="button" onclick="return hbOpenLogin(event, false);">Log in</button>
+        <!-- Desktop Only Icons -->
+        <div class="header-icons" id="desktop-icons">
+            <div class="icon">
+                <button class="profile-btn" type="button" onclick="return hbOpenLogin(event, false);">Log in</button>
+            </div>
+            <div class="icon"><img src="/common_elements/cart.png" alt="cart"></div>
         </div>
-        <div class="icon"><img src="/common_elements/cart.png" alt="cart"></div>
-    </div>
 </header>
 
 <script>
-  function closeMobileMenuIfOpen() {
-    const hamburger = document.getElementById('hamburger');
-    const navMenu = document.getElementById('nav-menu');
-    if (hamburger && navMenu) {
-      hamburger.classList.remove('active');
-      navMenu.classList.remove('active');
+    function closeMobileMenuIfOpen() {
+        const hamburger = document.getElementById('hamburger');
+        const navMenu = document.getElementById('nav-menu');
+        if (hamburger && navMenu) {
+            hamburger.classList.remove('active');
+            navMenu.classList.remove('active');
+        }
     }
-  }
 
-  // ✅ Safe opener: prevents navigation + stops bubbling (fixes “opens then disappears”)
-  function hbOpenLogin(e, closeMenu){
-    if (e){
-      e.preventDefault();
-      e.stopPropagation();
-    }
-    if (closeMenu) closeMobileMenuIfOpen();
+    // ✅ Safe opener: prevents navigation + stops bubbling (fixes “opens then disappears”)
+    function hbOpenLogin(e, closeMenu) {
+        if (e) {
+            e.preventDefault();
+            e.stopPropagation();
+        }
+        if (closeMenu) closeMobileMenuIfOpen();
 
-    if (typeof openLoginPopup === "function") {
-      openLoginPopup();
-    } else {
-      console.warn("openLoginPopup() not found on this page.");
+        if (typeof openLoginPopup === "function") {
+            openLoginPopup();
+        } else {
+            console.warn("openLoginPopup() not found on this page.");
+        }
+        return false;
     }
-    return false;
-  }
 </script>
