feat: Add customization feature with dropdowns for plate, bread, protein, veggies, and sauce selection
- Implemented HTML structure for customization interface
- Created CSS styles for layout and design of customization page
- Developed JavaScript functionality to manage state and update preview based on user selections
- Integrated local storage to handle cart functionality for selected items

--- a/common_elements/footer.html
+++ b/common_elements/footer.html
@@ -142,6 +142,11 @@
                         <li><a href="/story/story.html">Story</a></li>
                         <li><a href="/contact/contact.html">Contact Us</a></li>
                         <li><a href="#">Profile</a></li>
+                        <li>
+                            <a href="/customization/customization.html" style="font-weight:700;">
+                                Customize your plate
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 <div class="footer-column">
