updated title tags for contact and about us + added items in home page +

--- a/common_elements/header.html
+++ b/common_elements/header.html
@@ -64,9 +64,9 @@
         transition: filter 0.2s ease, transform 0.2s ease;
     }
 
-    .icon:hover img {
+    /* .icon:hover img {
         filter: brightness(0) invert(1);
-    }
+    } */
 
 
     .mobile-icons {
