--- a/menu/menu.html
+++ b/menu/menu.html
@@ -207,7 +207,7 @@
                 </div>
             </div>
 
-            <!-- SHAKERS (UPDATED EXACTLY LIKE THE IMAGE) -->
+            <!-- SHAKERS -->
             <div class="menu-card" data-category="shakers">
                 <div class="card-image-wrapper">
                     <img src="images/beef shaker.png" alt="Beef Shaker">
