--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Jeen - Healthy Food with Calculated Calories</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="home/style.css">
+    <link rel="stylesheet" href="menu/menu.css">
 </head>
 <body>
 
@@ -64,47 +65,179 @@
         </div>
 
         <div class="products-grid">
-            <div class="product-card" data-category="sandwiches">
-                <img src="home/OIP (1) (1) 3.png" alt="">
-                <div class="product-info">
-                    <h3 class="product-name">Sandwich</h3>
-                    <p class="product-description">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    <div class="product-footer">
-                        <span class="product-calories">🔥 120 Calories</span>
-                        <button class="add-button">+</button>
+            <div class="menu-card" data-category="sandwiches">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/turkey&cheese sandwich.png" alt="Turkey&cheese">
+                    <span class="cal-badge">350 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Turkey&Cheese</h3>
+                    <p>Slices of turkey breast with swiss cheese and fresh greens</p>
+                    <div class="card-footer">
+                        <span class="price">$9.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
             </div>
-            <div class="product-card" data-category="shakers">
-                <img src="home/OIP (1) (1) 3.png" alt="">
-                <div class="product-info">
-                    <h3 class="product-name">Shaker</h3>
-                    <p class="product-description">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    <div class="product-footer">
-                        <span class="product-calories">🔥 120 Calories</span>
-                        <button class="add-button">+</button>
+            <div class="menu-card" data-category="sandwiches">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/tuna sandwich.png" alt="Tuna Sandwich">
+                    <span class="cal-badge">320 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Tuna</h3>
+                    <p>Smashed avocado on sourdough with chili flakes</p>
+                    <div class="card-footer">
+                        <span class="price">$8.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
             </div>
-            <div class="product-card" data-category="salads">
-                <img src="home/OIP (1) (1) 3.png" alt="">
-                <div class="product-info">
-                    <h3 class="product-name">Salad</h3>
-                    <p class="product-description">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    <div class="product-footer">
-                        <span class="product-calories">🔥 120 Calories</span>
-                        <button class="add-button">+</button>
+
+            <div class="menu-card" data-category="sandwiches">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/halloumi sandwich.png" alt="Halloumi Pesto">
+                    <span class="cal-badge">420 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Halloumi Pesto</h3>
+                    <p>Grilled halloumi with basil pesto and tomatoes</p>
+                    <div class="card-footer">
+                        <span class="price">$10.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
             </div>
-            <div class="product-card" data-category="desserts">
-                <img src="home/OIP (1) (1) 3.png" alt="">
-                <div class="product-info">
-                    <h3 class="product-name">Desserts</h3>
-                    <p class="product-description">Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                    <div class="product-footer">
-                        <span class="product-calories">🔥 120 Calories</span>
-                        <button class="add-button">+</button>
+            <div class="menu-card" data-category="salads">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/quinoa salad.png" alt="Quinoa Power Salad">
+                    <span class="cal-badge">380 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Quinoa Power Salad</h3>
+                    <p>Quinoa, kale, cherry tomatoes, and lemon vinaigrette</p>
+                    <div class="card-footer">
+                        <span class="price">$11.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="salads">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/tuna salad.png" alt="Tuna salad">
+                    <span class="cal-badge">420 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Tuna Salad</h3>
+                    <p>Marinated tuna over mixed greens with tahini</p>
+                    <div class="card-footer">
+                        <span class="price">$12.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="salads">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/burger salad.png" alt="Burger Salad">
+                    <span class="cal-badge">500 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Burger Salad</h3>
+                    <p>Deconstructed burger bowl with lettuce, tomato, pickles, and ground beef</p>
+                    <div class="card-footer">
+                        <span class="price">$13.49</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+            <div class="menu-card" data-category="shakers">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/beef shaker.png" alt="Beef Shaker">
+                    <span class="cal-badge">360 Kcal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Beef Shaker</h3>
+                    <p>Beef Fillet, Air Fried Potatoes, Mixed Cabbage, Romanian Lettuce, Dill Pickles, Corn</p>
+                    <div class="card-footer">
+                        <span class="price">$6</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="shakers">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/shrimp shaker.png" alt="Shrimp Shaker">
+                    <span class="cal-badge">212 Kcal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Shrimp Shaker</h3>
+                    <p>Shrimps, Romanian Lettuce, Mixed Peppers, Green Onion, Shredded Carrots</p>
+                    <div class="card-footer">
+                        <span class="price">$7</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="shakers">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/chicken shaker.png" alt="Chicken Shaker">
+                    <span class="cal-badge">352 Kcal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Chicken Shaker</h3>
+                    <p>Grilled Chicken, Pasta, Mixed Cabbage, Romanian Lettuce, Dill Pickles, Corn</p>
+                    <div class="card-footer">
+                        <span class="price">$8</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="desserts">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/acai dessert.png" alt="Acai Berry Bowl">
+                    <span class="cal-badge">285 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Acai Berry Bowl</h3>
+                    <p>Fresh acai blended with banana, topped with granola and berries</p>
+                    <div class="card-footer">
+                        <span class="price">$12.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="desserts">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/chia dessert.png" alt="Chia Pudding Parfait">
+                    <span class="cal-badge">195 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Chia Pudding Parfait</h3>
+                    <p>Vanilla chia pudding layered with fresh berries and granola</p>
+                    <div class="card-footer">
+                        <span class="price">$9.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="menu-card" data-category="desserts">
+                <div class="card-image-wrapper">
+                    <img src="/menu/images/green youg dessert.png" alt="Greek Yogurt Parfait">
+                    <span class="cal-badge">220 cal</span>
+                </div>
+                <div class="card-content">
+                    <h3>Greek Yogurt Parfait</h3>
+                    <p>Creamy Greek yogurt with honey, berries, and almonds</p>
+                    <div class="card-footer">
+                        <span class="price">$8.99</span>
+                        <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
             </div>
@@ -421,10 +554,10 @@
         window.addEventListener("resize", updateArrows);
         updateArrows();
     </script>
-
+    <script src="menu/menu.js"></script>
     <script>
         const tabs = document.querySelectorAll('.filter-tab');
-        const products = document.querySelectorAll('.product-card');
+        const products = document.querySelectorAll('.menu-card');
 
         function filterProducts(category) {
             products.forEach(product => {
