customization and menu updated

--- a/cart/cart.html
+++ b/cart/cart.html
@@ -96,7 +96,7 @@
                     </form>
                 </div>
 
-                <!-- Step 2: Payment Method -->
+                <!--  Payment Method -->
                 <div id="step-2" class="checkout-step hidden">
                     <h2>Step 2 — Payment Method</h2>
                     <p class="payment-subtitle">All transactions are secure and encrypted</p>
@@ -116,7 +116,7 @@
                     <button type="button" id="confirm-btn" class="checkout-action-btn">Confirm Order</button>
                 </div>
 
-                <!-- Step 3: Order Confirmation -->
+                <!-- Order Confirmation -->
                 <div id="step-3" class="checkout-step confirmation-step hidden">
                     <div class="confirmation-icon">
                         <svg width="80" height="80" viewBox="0 0 80 80" fill="none">
