--- a/menu/menu.html
+++ b/menu/menu.html
@@ -28,14 +28,14 @@
             <!-- SANDWICHES -->
             <div class="menu-card" data-category="sandwiches">
                 <div class="card-image-wrapper">
-                    <img src="images/turkey&cheese sandwich.png" alt="Turkey&cheese">
-                    <span class="cal-badge">350 cal</span>
+                    <img src="images/customization.png" alt="customize">
+                    <span class="cal-badge">0 cal</span>
                 </div>
                 <div class="card-content">
-                    <h3>Turkey&Cheese</h3>
-                    <p>Slices of turkey breast with swiss cheese and fresh greens</p>
+                    <h3>Customize Your Own Plate</h3>
+                    <p>Create your perfect plate by choosing your favorite ingredients and flavors</p>
                     <div class="card-footer">
-                        <span class="price">$9.99</span>
+                        <span class="price">$0.00</span>
                         <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
@@ -119,14 +119,14 @@
             <!-- SALADS -->
             <div class="menu-card" data-category="salads">
                 <div class="card-image-wrapper">
-                    <img src="images/quinoa salad.png" alt="Quinoa Power Salad">
-                    <span class="cal-badge">380 cal</span>
+                    <img src="images/customization.png" alt="customize">
+                    <span class="cal-badge">0 cal</span>
                 </div>
                 <div class="card-content">
-                    <h3>Quinoa Power Salad</h3>
-                    <p>Quinoa, kale, cherry tomatoes, and lemon vinaigrette</p>
+                    <h3>Customize Your Own Plate</h3>
+                    <p>Create your perfect plate by choosing your favorite ingredients and flavors</p>
                     <div class="card-footer">
-                        <span class="price">$11.99</span>
+                        <span class="price">$0.00</span>
                         <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
@@ -210,18 +210,19 @@
             <!-- SHAKERS -->
             <div class="menu-card" data-category="shakers">
                 <div class="card-image-wrapper">
-                    <img src="images/beef shaker.png" alt="Beef Shaker">
-                    <span class="cal-badge">360 Kcal</span>
+                    <img src="images/customization.png" alt="customize">
+                    <span class="cal-badge">0 cal</span>
                 </div>
                 <div class="card-content">
-                    <h3>Beef Shaker</h3>
-                    <p>Beef Fillet, Air Fried Potatoes, Mixed Cabbage, Romanian Lettuce, Dill Pickles, Corn</p>
+                    <h3>Customize Your Own Plate</h3>
+                    <p>Create your perfect plate by choosing your favorite ingredients and flavors</p>
                     <div class="card-footer">
-                        <span class="price">$6</span>
+                        <span class="price">$0.00</span>
                         <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
             </div>
+
 
             <div class="menu-card" data-category="shakers">
                 <div class="card-image-wrapper">
@@ -256,14 +257,14 @@
             <!-- DESSERTS  -->
             <div class="menu-card" data-category="desserts">
                 <div class="card-image-wrapper">
-                    <img src="images/acai dessert.png" alt="Acai Berry Bowl">
-                    <span class="cal-badge">285 cal</span>
+                    <img src="images/customization.png" alt="customize">
+                    <span class="cal-badge">0 cal</span>
                 </div>
                 <div class="card-content">
-                    <h3>Acai Berry Bowl</h3>
-                    <p>Fresh acai blended with banana, topped with granola and berries</p>
+                    <h3>Customize Your Own Plate</h3>
+                    <p>Create your perfect plate by choosing your favorite ingredients and flavors</p>
                     <div class="card-footer">
-                        <span class="price">$12.99</span>
+                        <span class="price">$0.00</span>
                         <button class="add-to-cart"><img src="../common_elements/cart.png" alt="Add"></button>
                     </div>
                 </div>
